# rye-template-generator

./: .gitignore  README.md  pyproject.toml  pytest.ini  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker.yml  test.yml
config/: __init__.py  arguments.py
docker/tests/: Dockerfile
src/: main.py
src/lib/: templates.py  utils.py
tests/: test_main.py
