[project]
name = "rygen"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nishide-dev", email = "nishide.dev@gmail.com" }
]
dependencies = [
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "tomlkit>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "pre-commit>=3.7.0",
    "ruff>=0.3.5",
    "pytest-asyncio>=0.23.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[project.scripts]
rygen = "src.main:main"
